<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">account</string>
    <string name="no_linked_accounts">No linked records</string>
    <string name="my_linked_accounts">My linked records (%d)</string>
    <string name="title_activity_account_creation">AccountCreationActivity</string>
    <string name="create_account_title">Enter your Details</string>
    <string name="create_account">Create Account</string>
    <string name="ncg">\@ncg</string>
    <string name="patient_details">Patient details</string>
    <string name="create_username">Create Username</string>
    <string name="create_password">Create Password</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="year_of_birth_optional">Year of birth (optional)</string>
    <string name="username_validation_hint">Minimum length 3\nIt may contain . and -</string>
    <string name="password_validation_hint">Minimum length 8\nIt must contain one capital letter, one small letter, one number\nIt must also contain one special character</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="alphabets_and_space_only">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="account_details">Account details</string>
    <string name="set_a_password">Set a password</string>
    <string name="should_not_be_empty">Should not be empty</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="name_hint">Can be your first name middle name last name</string>
    <string name="consent_manager_id_hint">You could edit this to a memorable ID</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="ayushman_bharat_id">Ayushman Bharat ID (optional)</string>
    <string name="ayushman_validation_hint">Should be 9 characters long\nShould start with P</string>
    <string name="user_already_exits">This username is already in use. Please enter a different username</string>
    <string name="old_password">Enter Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="wrong_old_password_error">Password is invalid</string>
    <string name="confirm">Confirm</string>
    <string name="password_mismatch">Password doesn\'t match</string>
    <string name="password_match">Password matches</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="password_criteria">New password didn’t meet the criteria</string>
    <string name="otp">OTP</string>
    <string name="mobile_number_error">Mobile number should be 10 digits long</string>

<!--    Profile-->
    <string name="consent_manager_id">Consent Manager ID</string>
    <string name="password">Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="consent_pin">Consent PIN</string>
    <string name="yob">Year of Birth</string>
    <string name="ayushman_id">Ayushman Bharat ID</string>
    <string name="mobile">Mobile Number</string>
    <string name="my_profile">My Profile</string>
    <string name="create">Create</string>
    <string name="consent_placeholder">1234</string>
    <string name="consent_pin_not_created">Consent PIN not created</string>
    <string name="update">Update</string>
    <string name="dummy_password">12345678910</string>

<!--    Recover CMID-->
    <string name="forgot_cmid">Forgot CM ID</string>
    <string name="forgot_cmid_title">Recover Consent Manager ID</string>
    <string name="display_cmid_title">  is your Consent Manager ID. You could use this ID to login in the future</string>
    <string name="back_to_login">Back to login</string>
    <string name="no_matching_records_title">Sorry, We could not find a matching record.</string>
    <string name="no_matching_records_description">Please review your input and try again.</string>
    <string name="try_again">Try again</string>
    <string name="validate">Validate</string>
    <string name="resend_otp">Resend OTP</string>

<!--    Confirmation Texts-->
    <string name="congratulations">Congratulations!</string>
    <string name="registration_success_message">You are successfully registered into  the application</string>
    <string name="cm_id_info">is your Consent manager ID. You could use this ID to login in future</string>
    <string name="otp_sent_msg">An OTP has been sent to mobile number linked with your account</string>


    <string name="no_linked_records">No linked records</string>
    <string name="let_s_start">Let\'s start by adding your accounts</string>
    <string name="block_user_temporary">User blocked temporarily"</string>
</resources>
