<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.projecteka.resetpassword.ui.fragment.ReadIdentifierFragment">

    <data>

        <variable
            name="viewModel"
            type="in.projecteka.jataayu.user.account.viewmodel.ProfileFragmentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="@dimen/content_margin_medium"
                android:paddingLeft="@dimen/content_margin_large"
                android:paddingRight="@dimen/content_margin_large"
                android:paddingBottom="@dimen/content_margin_36">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:hint="@string/full_name"
                    style="@style/TextInputLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:digits="@string/alphabets_and_space_only"
                        android:focusable="@{viewModel.isEditMode}"
                        android:singleLine="true"
                        android:cursorVisible="@{viewModel.isEditMode}"
                        android:text="@{viewModel.preferenceRepository.name}"
                        android:focusableInTouchMode="@{viewModel.isEditMode}"
                        style="@style/TextInputEditText"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/til_consent_manager_id"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                    android:hint="@string/consent_manager_id"
                    app:layout_constraintTop_toBottomOf="@+id/til_name"
                    style="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:focusable="@{viewModel.isEditMode}"
                        android:cursorVisible="@{viewModel.isEditMode}"
                        android:focusableInTouchMode="@{viewModel.isEditMode}"
                        android:text="@{viewModel.preferenceRepository.consentManagerId}"
                        style="@style/TextInputEditText"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:hint="@string/mobile"
                    android:id="@+id/til_mobile_number"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_consent_manager_id"
                    style="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:focusable="@{viewModel.isEditMode}"
                        android:maxLength="14"
                        android:cursorVisible="@{viewModel.isEditMode}"
                        android:focusableInTouchMode="@{viewModel.isEditMode}"
                        android:text="@{viewModel.preferenceRepository.countryCode + viewModel.preferenceRepository.mobileIdentifier}"
                        style="@style/TextInputEditText.MobileNumber"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_yob"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                    android:hint="@string/yob"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_mobile_number"
                    style="@style/TextInputLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/TextInputEditText"
                        android:cursorVisible="@{viewModel.isEditMode}"
                        android:focusable="@{viewModel.isEditMode}"
                        android:focusableInTouchMode="@{viewModel.isEditMode}"
                        android:text="@{viewModel.yearOfBirth()}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lbl_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                    android:text="@string/gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_yob" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_gender"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/gender_chip_male"
                        android:focusable="@{viewModel.isEditMode}"
                        android:focusableInTouchMode="@{viewModel.isEditMode}"
                        android:clickable="@{viewModel.isEditMode}"
                        style="@style/Chip.ChoiceCustomized"
                        android:text="@string/male"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/gender_chip_female"
                        style="@style/Chip.ChoiceCustomized"
                        android:focusable="@{viewModel.isEditMode}"
                        android:focusableInTouchMode="@{viewModel.isEditMode}"
                        android:clickable="@{viewModel.isEditMode}"
                        android:text="@string/female"/>

                    <com.google.android.material.chip.Chip
                        android:focusable="@{viewModel.isEditMode}"
                        android:focusableInTouchMode="@{viewModel.isEditMode}"
                        android:clickable="@{viewModel.isEditMode}"
                        android:id="@+id/gender_chip_other"
                        style="@style/Chip.ChoiceCustomized"
                        android:text="@string/others" />
                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_ayushman_id"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                    android:hint="@string/ayushman_id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cg_gender"
                    style="@style/TextInputLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/TextInputEditText"
                        android:cursorVisible="@{viewModel.isEditMode}"
                        android:focusable="@{viewModel.isEditMode}"
                        android:focusableInTouchMode="@{viewModel.isEditMode}"
                        android:text="@{viewModel.ayushmanBharatId()}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_ayushman_id"
                    style="@style/TextInputLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@string/dummy_password"
                        android:cursorVisible="@{viewModel.isEditMode}"
                        android:minEms="8"
                        android:focusable="@{viewModel.isEditMode}"
                        android:focusableInTouchMode="@{viewModel.isEditMode}"
                        style="@style/TextInputEditText.Password"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_edit_password"
                        style="@style/Button.Secondary"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/content_margin_large"
                        android:layout_marginRight="@dimen/content_margin_large"
                        android:onClick="@{() -> viewModel.redirectChangePassword()}"
                        android:padding="@dimen/content_padding_extra_large"
                        android:text="@string/update"
                        android:textSize="@dimen/text_size_small"
                        app:layout_constraintTop_toBottomOf="@+id/til_ayushman_id"
                        app:layout_constraintBottom_toBottomOf="@+id/til_password"
                        app:layout_constraintLeft_toRightOf="@id/til_password"
                        app:layout_constraintRight_toRightOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_consent_pin"
                    android:layout_width="wrap_content"
                    android:hint="@string/consent_pin"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_password"
                    style="@style/TextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:text="@string/consent_placeholder"
                    android:minEms="8"
                    android:cursorVisible="@{viewModel.isEditMode}"
                    android:focusable="@{viewModel.isEditMode}"
                    android:focusableInTouchMode="@{viewModel.isEditMode}"
                    style="@style/TextInputEditText.Password"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit_consent_pin"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/content_margin_large"
                    android:layout_marginRight="@dimen/content_margin_large"
                    style="@style/Button.Secondary"
                    android:textSize="@dimen/text_size_small"
                    android:onClick="@{()->viewModel.redirectToEditConsentPin()}"
                    android:padding="@dimen/content_padding_extra_large"
                    android:layout_width="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/til_consent_pin"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/til_consent_pin"
                    app:layout_constraintLeft_toRightOf="@id/til_consent_pin"
                    android:text="@{viewModel.pinCreateOrEdit}" />

                <TextView
                    android:id="@+id/lbl_consent_pin_not_created"
                    android:layout_width="wrap_content"
                    android:textColor="@color/error_hint_color"
                    app:toggledVisibility="@{viewModel.showPinNotCreated}"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_small"
                    android:text="@string/consent_pin_not_created"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_consent_pin" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    android:layout_marginTop="@dimen/content_margin_extra_extra_large"
                    android:layout_height="wrap_content"
                    style="@style/Button"
                    android:onClick="@{() -> viewModel.logout()}"
                    android:padding="@dimen/content_margin_medium"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_consent_pin_not_created"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/action_logout" />

                <include
                    android:id="@+id/progress_bar_layout"
                    app:showProgress="@{viewModel.showProgress}"
                    app:message="@{viewModel.showProgressMessage}"
                    layout="@layout/progress_layout"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>