<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.AccountCreationActivity">

    <data>
        <variable
            name="viewModel"
            type="in.projecteka.jataayu.user.account.viewmodel.CreateAccountViewModel" />

        <variable
            name="spinnerListener"
            type="android.widget.AdapterView.OnItemSelectedListener" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="@dimen/content_margin_medium"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clipToPadding="false">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/button_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:paddingTop="60dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false">

                    <TextView
                        android:id="@+id/lbl_title"
                        style="@style/TextAppearance.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account_title"
                        android:textSize="@dimen/text_size_large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_full_name"
                        android:hint="@string/full_name"
                        android:layout_marginTop="@dimen/content_margin_extra_small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_title"
                        style="@style/TextInputLayoutStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            error_text='@{@string/should_not_be_empty}'
                            android:digits="@string/alphabets_and_space_only"
                            android:text="@={viewModel.inputFullName}"
                            toggle_error="@{viewModel.showErrorName}"
                            android:id="@+id/et_name"
                            style="@style/TextInputEditTextStyle"/>

                    </com.google.android.material.textfield.TextInputLayout>



                    <TextView
                        android:id="@+id/lbl_first_name_hint"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="12dp"
                        android:hint="@string/name_hint"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@id/til_full_name"
                        app:layout_constraintStart_toStartOf="@id/til_full_name"
                        app:layout_constraintTop_toBottomOf="@id/til_full_name"
                        tools:ignore="NotSibling" />

                    <TextView
                        android:id="@+id/lbl_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_margin_extra_small"
                        android:text="@string/gender"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_first_name_hint" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/cg_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_gender"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/gender_chip_male"
                            style="@style/Chip.ChoiceCustomized"
                            android:text="@string/male" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/gender_chip_female"
                            style="@style/Chip.ChoiceCustomized"
                            android:text="@string/female"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/gender_chip_other"
                            style="@style/Chip.ChoiceCustomized"
                            android:text="@string/others"/>
                    </com.google.android.material.chip.ChipGroup>

                    <TextView
                        android:id="@+id/tv_err_gender"
                        style="@style/TextAppearance.ErrorMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_margin_extra_extra_small"
                        android:text="@string/please_select_gender"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cg_gender"
                        app:toggledVisibility="@{viewModel.showErrorGender}" />


                    <com.google.android.material.textfield.TextInputLayout
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:id="@+id/til_yob"
                        android:layout_marginTop="@dimen/content_margin_medium"
                        android:hint="@string/year_of_birth_optional"
                        app:layout_constraintTop_toBottomOf="@+id/tv_err_gender"
                        style="@style/TextInputLayoutStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:clickable="false"
                            android:text=" "
                            style="@style/TextInputEditTextStyle"/>


                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatSpinner
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/til_yob"
                        app:layout_constraintBottom_toBottomOf="@+id/til_yob"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:id="@+id/spinner_yob"
                        android:layout_margin="@dimen/content_margin_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:text="yyyy"
                        android:textColor="@color/colorPrimary"
                        app:onItemSelected="@{spinnerListener}" />


                    <!--<androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_yob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/content_margin_medium"
                        android:layout_marginTop="@dimen/content_margin_extra_small"
                        android:drawSelectorOnTop="true"
                        android:drawableRight="@drawable/ic_calendar"
                        android:drawablePadding="@dimen/content_margin_large"
                        android:spinnerMode="dropdown"
                        android:text="yyyy"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintLeft_toRightOf="@+id/lbl_yob"
                        app:layout_constraintStart_toEndOf="@+id/lbl_yob"
                        app:layout_constraintTop_toBottomOf="@+id/tv_err_gender"
                        app:onItemSelected="@{spinnerListener}" />-->



                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="@dimen/content_margin_extra_small"
                        app:layout_constraintStart_toStartOf="parent"
                        android:hint="@string/ayushman_bharat_id"
                        android:id="@+id/til_ayushman_id"
                        app:layout_constraintTop_toBottomOf="@+id/til_yob"
                        style="@style/TextInputLayoutStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_ayushman_bharat_id"
                            android:inputType="textCapCharacters"
                            android:text="@={viewModel.inputAyushmanIdLbl}"
                            style="@style/TextInputEditTextStyle"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/ayushman_error_text"
                        style="@style/TextAppearance.ErrorMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_margin_extra_extra_small"
                        android:text="@string/ayushman_validation_hint"
                        app:toggledVisibility="@{viewModel.showErrorAyushmanId}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_ayushman_id" />

                    <com.google.android.material.button.MaterialButton
                        app:layout_constraintTop_toBottomOf="@+id/ayushman_error_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:id="@+id/btn_register"
                        android:layout_marginTop="30dp"
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:enabled="@{viewModel.submitEnabled}"
                        android:text="@string/register" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>